Tweaked impl. of the sub-commands of the `/power` command Changed data types of some variables from `ArrayList` to `LinkedList` for efficiency